samples/errors/wrong_arity_many.lox
// Error: Wrong number of arguments (too many)
// expect: runtime error
fun f(a) { return a; }
f(1, 2);
